--- a/yejo/src/main/resources/templates/admin/review-management.html
+++ b/yejo/src/main/resources/templates/admin/review-management.html
@@ -30,7 +30,7 @@
 	<div id="wrapper">
 
 		<!-- Sidebar -->
-		<div th:replace="admin/sidebar :: sidebarFragment"></div>
+		<div th:replace="~{admin/sidebar :: sidebarFragment}"></div>
 		<!-- End of Sidebar -->
 
 		<!-- Content Wrapper -->
@@ -59,7 +59,7 @@
 
 					<!-- 후기 출력 테이블 -->
 					<div class="table-responsive">
-						<table class="table table-bordered" id="reviewTable" width="100%"
+						<table class="table table-bordered" id="ReviewTable" width="100%"
 							cellspacing="0">
 							<thead class="thead-light">
 								<tr>
@@ -122,21 +122,22 @@
 									</button>
 								</div>
 								<div class="modal-body">
-									<form id="reviewForm">
+									<form id="ReviewForm">
 										<div class="form-group">
-											<label for="reviewAuthor">제목</label> <input type="text"
-												class="form-control" id="reviewAuthor" placeholder="이름 입력">
+											<label for="ReviewTitle">제목</label> <input type="text"
+												class="form-control" id="ReviewTitle" placeholder="제목 입력"
+												required>
 										</div>
 										<div class="form-group">
-											<label for="reviewContent">URL</label>
-											<input type="text" class="form-control" id="reviewHashtag"
-													placeholder="URL 입력">
+											<label for="ReviewUrl">URL</label> <input type="text"
+												class="form-control" id="ReviewUrl" placeholder="URL 입력"
+												required>
 										</div>
 										<div class="form-group">
-											<label for="reviewHashtag">해시태그 추가</label>
+											<label for="ReviewHashtag">해시태그 추가</label>
 											<div class="input-group mb-3">
-												<input type="text" class="form-control" id="reviewHashtag"
-													placeholder="# 해시태그 입력">
+												<input type="text" class="form-control" id="ReviewHashtag"
+													placeholder="태그 입력">
 												<div class="input-group-append">
 													<button class="btn btn-outline-secondary" type="button"
 														id="addHashtagButton">추가</button>
@@ -145,21 +146,16 @@
 											<div id="hashtagContainer"></div>
 										</div>
 										<div class="form-group">
-											<label for="reviewImage">대표 사진 업로드</label> <input type="file"
-												class="form-control-file" id="reviewImage" accept="image/*"
-												>
+											<label for="ReviewImage">대표 사진 업로드</label> <input type="file"
+												class="form-control-file" id="ReviewImage" accept="image/*" required>
 										</div>
 										<div class="form-group">
-											<label for="reviewContent">내용</label>
-											<textarea class="form-control" id="reviewContent" rows="3"
-												placeholder="후기 내용 입력"></textarea>
+											<label for="ReviewContent">내용</label>
+											<textarea class="form-control" id="ReviewContent" rows="3"
+												placeholder="후기 내용 입력" required></textarea>
 										</div>
+										<button type="submit" class="btn btn-primary">제출</button>
 									</form>
-								</div>
-								<div class="modal-footer">
-									<button type="button" class="btn btn-secondary"
-										data-dismiss="modal">닫기</button>
-									<button type="button" class="btn btn-primary">저장</button>
 								</div>
 							</div>
 						</div>
@@ -228,5 +224,5 @@
 	<script src="/js/sb-admin-2.min.js"></script>
 
 </body>
-<script src="../js/admin/review-management.js"></script>
+<script src="../js/admin/Review-management.js"></script>
 </html>
