--- a/yejo/src/main/resources/templates/admin/sidebar.html
+++ b/yejo/src/main/resources/templates/admin/sidebar.html
@@ -54,7 +54,7 @@
 
             <!-- Nav Item - Tables -->
             <li class="nav-item">
-                <a class="nav-link" href="review-management">
+                <a class="nav-link" href="Review-management">
                     <i class="fas fa-fw fa-table"></i>
                     <span>후기</span></a>
             </li>
