--- a/yejo/src/main/resources/templates/main/header.html
+++ b/yejo/src/main/resources/templates/main/header.html
@@ -9,7 +9,7 @@
 					<li><a href="/portfolio">PORTFOLIO</a></li>
 					<li><a href="/consulting">CONSULTANT </a></li>
 					<li><a href="/location">LOCATION </a></li>
-					<li><a href="/review">REVIEW</a></li>
+					<li><a href="/Review">Review</a></li>
 				</ul>
 			</div>
 			<a href="#menu" class="btn-m-menu"><span>메뉴</span></a><!-- for mobile -->
