--- a/yejo/src/main/resources/templates/main/review.html
+++ b/yejo/src/main/resources/templates/main/review.html
@@ -40,7 +40,7 @@
 <link rel="stylesheet" type="text/css" href="/css/slick.css">
 <link rel="stylesheet" type="text/css" href="/css/swiper.min.css">
 <link rel="stylesheet" type="text/css" href="/css/responsive.css">
-<link rel="stylesheet" type="text/css" href="/css/review.css">
+<link rel="stylesheet" type="text/css" href="/css/Review.css">
 <link rel="stylesheet" type="text/css" href="/css/kakao.css">
 
 <script type="text/javascript" src="/js/jquery-1.11.1.min.js"></script>
@@ -85,13 +85,13 @@
 		<div id="container">
 			<div id="contArea">
 				<div class="sub-title">
-					<h1>REVIEW</h1>
+					<h1>Review</h1>
 				</div>
 				<div class="wow fadeIn" data-wow-delay="0.3s"
 					data-wow-duration="0.8s">
 					<div class="real-cont">
 						<!--// content -->
-						<div class="review">
+						<div class="Review">
 							<a href="https://blog.naver.com/jiyukimm/223154111804"
 								class="link-wrapper" target="_blank">
 								<div class="content">
@@ -111,7 +111,7 @@
 								class="image">
 							</a>
 						</div>
-						<div class="review">
+						<div class="Review">
 							<a href="https://blog.naver.com/nosugar-111/223331790554"
 								class="link-wrapper" target="_blank">
 								<div class="content">
@@ -132,7 +132,7 @@
 								class="image">
 							</a>
 						</div>
-						<div class="review">
+						<div class="Review">
 							<a href="https://blog.naver.com/ah__jin/223450205242"
 								class="link-wrapper" target="_blank">
 								<div class="content">
