--- a/yejo/src/main/resources/static/css/review.css
+++ b/yejo/src/main/resources/static/css/review.css
@@ -1,4 +1,4 @@
-.review {
+.Review {
     display: flex;  /* 기본적으로 수평 정렬 */
     align-items: flex-start; /* 수직 상단 정렬 */
     margin: 20px; /* 전체 여백 */
@@ -7,17 +7,17 @@
 }
 
 /* 마지막 리뷰의 경계선 제거 */
-.real-cont > .review:last-of-type {
+.real-cont > .Review:last-of-type {
     border-bottom: none;
     margin-bottom: 0;
 }
 
-.review .content {
+.Review .content {
     flex: 1; /* 본문 내용이 가변적으로 크기를 조정 */
     margin-right: 20px; /* 본문과 이미지 사이의 여백 */
 }
 
-.review a {
+.Review a {
     text-decoration: none; /* 링크 밑줄 제거 */
     color: inherit; /* 링크의 색상을 부모 요소의 색상으로 설정 */
 }
@@ -96,7 +96,7 @@
         flex-direction: column; /* 세로 방향으로 쌓이게 설정 */
     }
 
-    .review .content {
+    .Review .content {
         margin-right: 0; /* 모바일에서는 오른쪽 여백 제거 */
         margin-bottom: 20px; /* 이미지와의 간격을 위해 하단 여백 추가 */
     }
