--- a/yejo/src/main/resources/templates/main/company.html
+++ b/yejo/src/main/resources/templates/main/company.html
@@ -75,31 +75,13 @@
 		<div class="real-cont">
 			<!--// content -->
 				<div class="greeting wow fadeIn"  data-wow-delay="0.3s" data-wow-duration="0.8s">
-					<div class="img" style="width:400px; height:500px;"><img src="http://yejo7048.cdn1.cafe24.com/images/sub/greeting.jpg" alt=""></div>
+                    <div class="img">
+                        <!-- 이미지 경로 바인딩 -->
+                        <img th:src="@{'/uploads/' + ${savedImagePath}}" alt="대표 이미지">
+                    </div>
 					<div class="txt-wrap">
 						<div class="col">
-							<p class="tit">안녕하세요, YEJO Interior 대표 이형준입니다.</p>
-							<p class="txt">사람들은 각자 자신을 둘러싼 공간 속에서 삶을 영위하고 가치를 실현합니다. <br>공간은 사람에 의해 창조되고, 동시에 우리 역시 공간을 통해 정의됩니다.</p>
-							<p class="txt">저희 예조인테리어는 고객님에게 최고의 가치를 선사하기 위하여 <br>'남들과는 다른' 섬세함과 창의성을 내세운 서비스를 제공합니다.</p>
-							<p class="txt">오로지 고객님 한 분만을 위해, 주인공으로서 공간에 머무르실 수 있도록 <br>전문성을 갖춘 직원들이 상호 소통하며 노력하고 있습니다.</p>
-							<p class="txt">기본기에 혁신성을 더해 어디에서도 누리지 못한 라이프스타일을 선사해 드리겠습니다.</p>
-							<p class="txt">예조인테리어를 찾아 주신 분들께 진심으로 감사드립니다.</p>
-						</div>
-						<div class="col">
-							<h2 class="tit"><span class="highlight">트렌드는 소통으로부터</span></h2>
-							<p class="txt">예조인테리어는 이 시대의 트렌드를 고객님에게 적절히 접목시키기 위하여 소통에 중점을 두고 작업합니다.</p>
-						</div>
-						<div class="col">
-							<h2 class="tit"><span class="highlight">남들과는 다르다</span></h2>
-							<p class="txt">예조인테리어는 이 시대의 트렌드를 고객님에게 적절히 접목시키기 위하여 소통에 중점을 두고 작업합니다.</p>
-						</div>
-						<div class="col">
-							<h2 class="tit"><span class="highlight">안전이 최우선</span></h2>
-							<p class="txt">예조인테리어는 전문 시공팀과 10년 넘게 호흡을 맞춰 왔으며, 무엇보다도 안전을 중요시합니다. </p>
-						</div>
-						<div class="col">
-							<h2 class="tit"><span class="highlight">A to Z, 비스포크 서비스</span></h2>
-							<p class="txt">모든 프로젝트마다 풍부한 지식과 경험을 갖춘 디자이너 및 시공 팀장이 배정되어, <br>상담부터 A/S까지 오로지 고객님만을 위해 진행됩니다.</p>
+							<p th:utext="${savedIntroductionText}" class="txt"></p>
 						</div>
 					</div>
 				</div>
